maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:74: error: not found: value estSurBisctuit
  while(!estSurBisctuit()){
         ^